@startuml DEV_UP_Class_Diagram

!theme plain
skinparam classAttributeIconSize 0

' Enums
enum UserRole {
    ADMIN
    FORMATEUR  
    APPRENANT
}

enum Difficulty {
    DEBUTANT
    INTERMEDIAIRE
    AVANCE
    EXPERT
}

enum QuestionType {
    QCM
    CODE
    TEXTE
}

' Core Classes
class User {
    -id: Long
    -name: String
    -email: String
    -password: String
    -role: UserRole
    -level: Integer
    -points: Integer
    --
    +login(email, password): Boolean
    +logout(): void
    +updateProfile(data): Boolean
    +getProgress(): List<Progression>
    +canCreateChallenge(): Boolean
}

class Challenge {
    -id: Long
    -title: String
    -description: String
    -difficulty: Difficulty
    -points: Integer
    -deadline: Date
    --
    +start(user): Progression
    +submit(user, content): Submission
    +getQuestions(): List<Question>
    +isExpired(): Boolean
}

class FocusSession {
    -id: Long
    -duration: Integer
    -breakTime: Integer
    -startTime: Date
    -endTime: Date
    -completed: Boolean
    --
    +start(): void
    +pause(): void
    +resume(): void
    +complete(): void
    +getTotalTime(): Integer
}

class Category {
    -id: Long
    -name: String
    -description: String
    -icon: String
    --
    +getChallenges(): List<Challenge>
    +addChallenge(challenge): void
    +getChallengeCount(): Integer
}

class Question {
    -id: Long
    -text: String
    -type: QuestionType
    -points: Integer
    -order: Integer
    --
    +validateAnswer(answer): Boolean
    +getCorrectAnswer(): String
    +addResponse(response): void
}

class Response {
    -id: Long
    -content: String
    -correct: Boolean
    -score: Integer
    -timeSpent: Integer
    --
    +calculateScore(): Integer
    -isCorrect(): Boolean
}

class Progression {
    -id: Long
    -currentLevel: Integer
    -score: Integer
    -completion: Float
    -startDate: Date
    -lastActivity: Date
    --
    +advance(): void
    +isCompleted(): Boolean
    +getTimeSpent(): Integer
    +getRemainingPoints(): Integer
}

class Submission {
    -id: Long
    -content: String
    -file: String
    -feedback: String
    -grade: Integer
    -status: String
    -submittedAt: Date
    --
    +submit(): void
    +evaluate(grade, feedback): void
    -isEvaluated(): Boolean
    -isValid(): Boolean
}

' Relationships
User "1" -- "*" Challenge : creates
User "1" -- "*" FocusSession : has
User "1" -- "*" Progression : tracks
User "1" -- "*" Submission : submits
User "1" -- "*" Response : answers

Challenge "1" -- "*" Question : contains
Challenge "1" -- "*" Submission : receives
Challenge "1" -- "*" Progression : generates

Question "1" -- "*" Response : receives

Challenge "*" -- "1" Category : belongs_to

Submission "1" -- "1" User : belongs_to
Progression "1" -- "1" User : belongs_to
Progression "1" -- "1" Challenge : belongs_to
Response "1" -- "1" User : belongs_to
Response "1" -- "1" Question : belongs_to

@enduml
